library/general/poddisruptionbudget/samples/poddisruptionbudget/example_allowed_max_unavailable.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: nginx-pdb
  namespace: default
spec:
  maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
