library/general/poddisruptionbudget/samples/poddisruptionbudget/example_disallowed_min_available.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: nginx-pdb
  namespace: default
spec:
  minAvailable: 3
  selector:
    matchLabels:
      app: nginx
